Fixing inputs and outputs for vertex AI

--- a/vertex_ai_pipeline.ipynb
+++ b/vertex_ai_pipeline.ipynb
@@ -98,14 +98,14 @@
    "outputs": [],
    "source": [
     "@dsl.container_component\n",
-    "def toxic_data_cleaning(project: str, bucket: str, data_file_name: str,  features: Output[Artifact]):\n",
+    "def toxic_data_cleaning(features: Input[Artifact], X_dtm: Output[Artifact], y: Output[Artifact]):\n",
     "\n",
     "    return dsl.ContainerSpec(\n",
     "        image=f'{REGION}-docker.pkg.dev/{PROJECT_ID}/{IMAGE_REG}/toxic-data-cleaner:0.0.1',\n",
     "        command=[\n",
     "            'python3', '/pipelines/component/src/component.py'\n",
     "        ],\n",
-    "        args=['--project_id',project,'--bucket',bucket,'--file_name',data_file_name,'--feature_path', features.path])"
+    "        args=['--dataset',features.path])"
    ]
   },
   {
