--- a/vertex_ai_pipeline.ipynb
+++ b/vertex_ai_pipeline.ipynb
@@ -105,7 +105,7 @@
     "        command=[\n",
     "            'python3', '/pipelines/component/src/component.py'\n",
     "        ],\n",
-    "        args=['--dataset',features.path])"
+    "        args=['--dataset',features.path, '--X_dtm', X_dtm.path, '--y', y.path])"
    ]
   },
   {
@@ -115,20 +115,126 @@
    "outputs": [],
    "source": [
     "@dsl.container_component\n",
-    "def multilabel_classifier(project: str, features: Input[Artifact], model_bucket: str,  metrics: OutputPath(str)):\n",
+    "def multilabel_classifier(project: str, X_dtm: Input[Artifact], y: Input[Artifact], model_bucket: str,  metrics: OutputPath(str)):\n",
     "\n",
     "    return dsl.ContainerSpec(\n",
     "        image=f'{REGION}-docker.pkg.dev/{PROJECT_ID}/{IMAGE_REG}/toxic-multilabel-trainer:0.0.1',\n",
     "        command=[\n",
     "            'python3', '/pipelines/component/src/component.py'\n",
     "        ],\n",
-    "        args=['--project_id',project,'--feature_path',features.path,'--model_repo',model_bucket,'--metrics_path', metrics])"
+    "        args=['--project_id',project,'--X_dtm', X_dtm.path, 'y', y.path,'--model_repo',model_bucket,'--metrics_path', metrics])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the workflow of the pipeline.\n",
+    "@kfp.dsl.pipeline(\n",
+    "    name=\"toxic-predictor-mlp\")\n",
+    "def pipeline(project_id: str, data_bucket: str, trainset_filename: str):\n",
+    "    \n",
+    "    # The first step    \n",
+    "    di_op = toxic_data_ingestion(\n",
+    "        project=project_id,\n",
+    "        bucket=data_bucket,\n",
+    "        data_file_name=trainset_filename\n",
+    "    )\n",
+    "\n",
+    "    # The second step \n",
+    "    cleaning_op = toxic_data_cleaning(\n",
+    "        features=di_op.outputs['features']\n",
+    "    )\n",
+    "    \n",
+    "    #roman help: waarom is dit fout?\n",
+    "    # The third step\n",
+    "    training_op = multilabel_classifier(\n",
+    "        project=project_id,      \n",
+    "        X_dtm=cleaning_op.outputs['X_dtm']\n",
+    "        y=cleaning_op.outputs['y']\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compile the Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kfp import compiler\n",
+    "compiler.Compiler().compile(pipeline_func=pipeline,\n",
+    "        package_path='toxic_predictor_mlp.yaml')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run the Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import google.cloud.aiplatform as aip\n",
+    "\n",
+    "#roman help: wat is dit / hebben wij dit gedaan? (GOOGLE_APPLICATION_CREDENTIALS)\n",
+    "# Before initializing, make sure to set the GOOGLE_APPLICATION_CREDENTIALS\n",
+    "# environment variable to the path of your service account.\n",
+    "\n",
+    "aip.init(\n",
+    "    project=PROJECT_ID,\n",
+    "    location=REGION,\n",
+    ")\n",
+    "\n",
+    "job = aip.PipelineJob(\n",
+    "    display_name=\"toxic-predictor-mlp-pipeline\",\n",
+    "    template_path=\"toxic_predictor_mlp.yaml\",\n",
+    "    enable_caching=False,\n",
+    "    pipeline_root=PIPELINE_ROOT,\n",
+    "    parameter_values={\n",
+    "        'project_id': PROJECT_ID,\n",
+    "        'data_bucket': 'data_de2023_group1', \n",
+    "        'trainset_filename': 'train.csv',\n",
+    "        'model_repo':'models_de2023_group1' \n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "job.run()"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.6 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
