--- a/vertex_ai_pipeline.ipynb
+++ b/vertex_ai_pipeline.ipynb
@@ -155,11 +155,10 @@
     "        features=di_op.outputs['features']\n",
     "    )\n",
     "    \n",
-    "    #roman help: waarom is dit fout?\n",
     "    # The third step\n",
     "    training_op = multilabel_classifier(\n",
     "        project=project_id,      \n",
-    "        X_dtm=cleaning_op.outputs['X_dtm']\n",
+    "        X_dtm=cleaning_op.outputs['X_dtm'],\n",
     "        y=cleaning_op.outputs['y']\n",
     "    )"
    ]
