Created app.py file for the reuse of cleaner image

--- a/vertex_ai_pipeline.ipynb
+++ b/vertex_ai_pipeline.ipynb
@@ -169,7 +169,7 @@
     "        command=[\n",
     "            'python3', '/pipelines/component/src/component.py'\n",
     "        ],\n",
-    "        args=['--dataset',features.path, '--X_dtm', X_dtm.path, '--y', y.path])"
+    "        args=['--features',features.path, '--X_dtm', X_dtm.path, '--y', y.path])"
    ]
   },
   {
@@ -179,14 +179,14 @@
    "outputs": [],
    "source": [
     "@dsl.container_component\n",
-    "def multilabel_classifier(project: str, X_dtm: Input[Artifact], y: Input[Artifact], model_bucket: str,  metrics: OutputPath(str)):\n",
+    "def multilabel_classifier(project: str, X_dtm: Input[Artifact], y_all: Input[Artifact], model_bucket: str,  metrics: OutputPath(str)):\n",
     "\n",
     "    return dsl.ContainerSpec(\n",
     "        image=f'{REGION}-docker.pkg.dev/{PROJECT_ID}/{IMAGE_REG}/toxic-multilabel-trainer:0.0.1',\n",
     "        command=[\n",
     "            'python3', '/pipelines/component/src/component.py'\n",
     "        ],\n",
-    "        args=['--project_id',project,'--X_dtm', X_dtm.path, 'y', y.path,'--model_repo',model_bucket,'--metrics_path', metrics])"
+    "        args=['--project_id', project,'--X_dtm', X_dtm.path, '--y_all', y_all.path,'--model_repo',model_bucket,'--metrics_path', metrics])"
    ]
   },
   {
@@ -206,22 +206,22 @@
     "@kfp.dsl.pipeline(\n",
     "    name=\"toxic-predictor-mlp\")\n",
     "def pipeline(project_id: str, data_bucket: str, trainset_filename: str, model_repo: str):\n",
-    "    \n",
-    "    # The first step    \n",
+    "\n",
+    "    # The first step\n",
     "    di_op = toxic_data_ingestion(\n",
     "        project=project_id,\n",
     "        bucket=data_bucket,\n",
     "        data_file_name=trainset_filename\n",
     "    )\n",
     "\n",
-    "    # The second step \n",
+    "    # The second step\n",
     "    cleaning_op = toxic_data_cleaning(\n",
     "        features=di_op.outputs['features']\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # The third step\n",
     "    training_op = multilabel_classifier(\n",
-    "        project=project_id,      \n",
+    "        project=project_id,\n",
     "        X_dtm=cleaning_op.outputs['X_dtm'],\n",
     "        y=cleaning_op.outputs['y'],\n",
     "        model_bucket = model_repo\n",
@@ -316,9 +316,9 @@
     "    pipeline_root=PIPELINE_ROOT,\n",
     "    parameter_values={\n",
     "        'project_id': PROJECT_ID,\n",
-    "        'data_bucket': 'data_de2023_group1', \n",
+    "        'data_bucket': 'data_de2023_group1',\n",
     "        'trainset_filename': 'train.csv',\n",
-    "        'model_repo':'models_de2023_group1' \n",
+    "        'model_repo':'models_de2023_group1'\n",
     "    }\n",
     ")\n",
     "\n",
