fixed components build pipeline

--- a/vertex_ai_pipeline.ipynb
+++ b/vertex_ai_pipeline.ipynb
@@ -64,8 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "@dsl.container_component\n",
-    "def toxic_data_ingestion(project: str, bucket: str, data_file_name: str,  features: Output[Artifact]):\n",
+    "def toxic_data_ingestion(project: str, bucket: str, data_file_name: str,  features: Output[Dataset]):\n",
     "\n",
     "    return dsl.ContainerSpec(\n",
     "        image=f'{REGION}-docker.pkg.dev/{PROJECT_ID}/{IMAGE_REG}/toxic-data-ingestor:0.0.1',\n",
@@ -144,12 +148,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "@dsl.container_component\n",
-    "def toxic_data_cleaning(features: Input[Artifact], X_dtm: Output[Artifact], y_all: Output[Artifact]):\n",
+    "def toxic_data_cleaner(features: Input[Dataset], cleaned_data: Output[Dataset]):\n",
     "\n",
     "    return dsl.ContainerSpec(\n",
     "        image=f'{REGION}-docker.pkg.dev/{PROJECT_ID}/{IMAGE_REG}/toxic-data-cleaner:0.0.1',\n",
@@ -157,20 +161,42 @@
     "            'python3', '/pipelines/component/src/component.py'\n",
     "        ],\n",
     "        args=['--dataframe_path',features.path, \n",
-    "              '--X_dtm_path', X_dtm.path, \n",
-    "              '--y_all_path', y_all.path\n",
+    "              '--cleaned_data_path', cleaned_data.path\n",
     "             ]\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "@dsl.container_component\n",
+    "def toxic_train_test_split(cleaned_data: Input[Dataset], train: Output[Dataset], test: Output[Dataset]):\n",
+    "\n",
+    "    return dsl.ContainerSpec(\n",
+    "        image=f'{REGION}-docker.pkg.dev/{PROJECT_ID}/{IMAGE_REG}/toxic-train-test-split:0.0.1',\n",
+    "        command=[\n",
+    "            'python3', '/pipelines/component/src/component.py'\n",
+    "        ],\n",
+    "        args=['--clean_data_path',cleaned_data.path,\n",
+    "              '--train_path', train.path,\n",
+    "              '--test_path', test.path\n",
+    "             ]\n",
+    "    )"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "@dsl.container_component\n",
-    "def multilabel_classifier(project: str, X_dtm: Input[Artifact], y_all: Input[Artifact], model_bucket: str,  metrics: OutputPath(str)):\n",
+    "def multilabel_classifier(project: str, train: Input[Dataset], model_bucket: str,  metrics: OutputPath(str)):\n",
     "\n",
     "    return dsl.ContainerSpec(\n",
     "        image=f'{REGION}-docker.pkg.dev/{PROJECT_ID}/{IMAGE_REG}/toxic-multilabel-trainer:0.0.1',\n",
@@ -178,13 +204,37 @@
     "            'python3', '/pipelines/component/src/component.py'\n",
     "        ],\n",
     "        args=['--project_id', project,\n",
-    "              '--X_dtm_path', X_dtm.path, \n",
-    "              '--y_all_path', y_all.path,\n",
+    "              '--train_path', train.path,\n",
     "              '--model_repo',model_bucket,\n",
     "              '--metrics_path', metrics\n",
     "             ]\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "@dsl.container_component\n",
+    "def toxic_predictor(project: str, test: Input[Dataset], model_bucket: str, metrics: OutputPath(str)):\n",
+    "\n",
+    "    return dsl.ContainerSpec(\n",
+    "        image=f'{REGION}-docker.pkg.dev/{PROJECT_ID}/{IMAGE_REG}/toxic-predictor:0.0.1',\n",
+    "        command=[\n",
+    "            'python3', '/pipelines/component/src/component.py'\n",
+    "        ],\n",
+    "        args=['--project_id', project,\n",
+    "              '--predict_data', test.path,\n",
+    "              '--model_repo',model_bucket,\n",
+    "              '--metrics_path', metrics,\n",
+    "              '--validation_data', 'True'\n",
+    "             ]\n",
+    "    )"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -195,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,16 +262,27 @@
     "    )\n",
     "\n",
     "    # The second step\n",
-    "    cleaning_op = toxic_data_cleaning(\n",
+    "    dc_op = toxic_data_cleaner(\n",
     "        features=di_op.outputs['features']\n",
     "    )\n",
     "\n",
     "    # The third step\n",
-    "    training_op = multilabel_classifier(\n",
+    "    tts_op = toxic_train_test_split(\n",
+    "        cleaned_data=dc_op.outputs['cleaned_data']\n",
+    "    )\n",
+    "\n",
+    "    # The fourth step\n",
+    "    mc_op = multilabel_classifier(\n",
     "        project=project_id,\n",
-    "        X_dtm=cleaning_op.outputs['X_dtm'],\n",
-    "        y_all=cleaning_op.outputs['y_all'],\n",
-    "        model_bucket = model_repo\n",
+    "        train=tts_op.outputs['train'],\n",
+    "        model_bucket=model_repo\n",
+    "    )\n",
+    "\n",
+    "    # The fifth step\n",
+    "    tp_op = toxic_predictor(\n",
+    "        project=project_id,\n",
+    "        test=tts_op.outputs['test'],\n",
+    "        model_bucket=model_repo\n",
     "    )"
    ]
   },
@@ -234,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -260,22 +321,26 @@
      "output_type": "stream",
      "text": [
       "Creating PipelineJob\n",
-      "PipelineJob created. Resource name: projects/791882449847/locations/us-central1/pipelineJobs/toxic-predictor-mlp-20231020160809\n",
+      "PipelineJob created. Resource name: projects/791882449847/locations/us-central1/pipelineJobs/toxic-predictor-mlp-20231021192450\n",
       "To use this PipelineJob in another session:\n",
-      "pipeline_job = aiplatform.PipelineJob.get('projects/791882449847/locations/us-central1/pipelineJobs/toxic-predictor-mlp-20231020160809')\n",
+      "pipeline_job = aiplatform.PipelineJob.get('projects/791882449847/locations/us-central1/pipelineJobs/toxic-predictor-mlp-20231021192450')\n",
       "View Pipeline Job:\n",
-      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/toxic-predictor-mlp-20231020160809?project=791882449847\n",
-      "PipelineJob projects/791882449847/locations/us-central1/pipelineJobs/toxic-predictor-mlp-20231020160809 current state:\n",
-      "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/791882449847/locations/us-central1/pipelineJobs/toxic-predictor-mlp-20231020160809 current state:\n",
-      "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/791882449847/locations/us-central1/pipelineJobs/toxic-predictor-mlp-20231020160809 current state:\n",
-      "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/791882449847/locations/us-central1/pipelineJobs/toxic-predictor-mlp-20231020160809 current state:\n",
-      "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/791882449847/locations/us-central1/pipelineJobs/toxic-predictor-mlp-20231020160809 current state:\n",
-      "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob run completed. Resource name: projects/791882449847/locations/us-central1/pipelineJobs/toxic-predictor-mlp-20231020160809\n"
+      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/toxic-predictor-mlp-20231021192450?project=791882449847\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Job failed with:\ncode: 5\nmessage: \"Failed to create pipeline job. Error: The image us-central1-docker.pkg.dev/assignment1-402316/image-repo-group1/toxic-predictor:0.0.1 does not exist..\"\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[14], line 28\u001B[0m\n\u001B[0;32m     10\u001B[0m aip\u001B[38;5;241m.\u001B[39minit(\n\u001B[0;32m     11\u001B[0m     project\u001B[38;5;241m=\u001B[39mPROJECT_ID,\n\u001B[0;32m     12\u001B[0m     location\u001B[38;5;241m=\u001B[39mREGION,\n\u001B[0;32m     13\u001B[0m )\n\u001B[0;32m     15\u001B[0m job \u001B[38;5;241m=\u001B[39m aip\u001B[38;5;241m.\u001B[39mPipelineJob(\n\u001B[0;32m     16\u001B[0m     display_name\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtoxic-predictor-mlp-pipeline\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m     17\u001B[0m     template_path\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtoxic_predictor_mlp.yaml\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     25\u001B[0m     }\n\u001B[0;32m     26\u001B[0m )\n\u001B[1;32m---> 28\u001B[0m \u001B[43mjob\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\DataEngineering\\venv\\Lib\\site-packages\\google\\cloud\\aiplatform\\pipeline_jobs.py:319\u001B[0m, in \u001B[0;36mPipelineJob.run\u001B[1;34m(self, service_account, network, sync, create_request_timeout)\u001B[0m\n\u001B[0;32m    300\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Run this configured PipelineJob and monitor the job until completion.\u001B[39;00m\n\u001B[0;32m    301\u001B[0m \n\u001B[0;32m    302\u001B[0m \u001B[38;5;124;03mArgs:\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    315\u001B[0m \u001B[38;5;124;03m        Optional. The timeout for the create request in seconds.\u001B[39;00m\n\u001B[0;32m    316\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    317\u001B[0m network \u001B[38;5;241m=\u001B[39m network \u001B[38;5;129;01mor\u001B[39;00m initializer\u001B[38;5;241m.\u001B[39mglobal_config\u001B[38;5;241m.\u001B[39mnetwork\n\u001B[1;32m--> 319\u001B[0m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_run\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    320\u001B[0m \u001B[43m    \u001B[49m\u001B[43mservice_account\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mservice_account\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    321\u001B[0m \u001B[43m    \u001B[49m\u001B[43mnetwork\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mnetwork\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    322\u001B[0m \u001B[43m    \u001B[49m\u001B[43msync\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43msync\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    323\u001B[0m \u001B[43m    \u001B[49m\u001B[43mcreate_request_timeout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcreate_request_timeout\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    324\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\DataEngineering\\venv\\Lib\\site-packages\\google\\cloud\\aiplatform\\base.py:817\u001B[0m, in \u001B[0;36moptional_sync.<locals>.optional_run_in_thread.<locals>.wrapper\u001B[1;34m(*args, **kwargs)\u001B[0m\n\u001B[0;32m    815\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m:\n\u001B[0;32m    816\u001B[0m         VertexAiResourceNounWithFutureManager\u001B[38;5;241m.\u001B[39mwait(\u001B[38;5;28mself\u001B[39m)\n\u001B[1;32m--> 817\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mmethod\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    819\u001B[0m \u001B[38;5;66;03m# callbacks to call within the Future (in same Thread)\u001B[39;00m\n\u001B[0;32m    820\u001B[0m internal_callbacks \u001B[38;5;241m=\u001B[39m []\n",
+      "File \u001B[1;32m~\\DataEngineering\\venv\\Lib\\site-packages\\google\\cloud\\aiplatform\\pipeline_jobs.py:356\u001B[0m, in \u001B[0;36mPipelineJob._run\u001B[1;34m(self, service_account, network, sync, create_request_timeout)\u001B[0m\n\u001B[0;32m    334\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Helper method to ensure network synchronization and to run\u001B[39;00m\n\u001B[0;32m    335\u001B[0m \u001B[38;5;124;03mthe configured PipelineJob and monitor the job until completion.\u001B[39;00m\n\u001B[0;32m    336\u001B[0m \n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    348\u001B[0m \u001B[38;5;124;03m        Optional. The timeout for the create request in seconds.\u001B[39;00m\n\u001B[0;32m    349\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    350\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39msubmit(\n\u001B[0;32m    351\u001B[0m     service_account\u001B[38;5;241m=\u001B[39mservice_account,\n\u001B[0;32m    352\u001B[0m     network\u001B[38;5;241m=\u001B[39mnetwork,\n\u001B[0;32m    353\u001B[0m     create_request_timeout\u001B[38;5;241m=\u001B[39mcreate_request_timeout,\n\u001B[0;32m    354\u001B[0m )\n\u001B[1;32m--> 356\u001B[0m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_block_until_complete\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\DataEngineering\\venv\\Lib\\site-packages\\google\\cloud\\aiplatform\\pipeline_jobs.py:595\u001B[0m, in \u001B[0;36mPipelineJob._block_until_complete\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m    592\u001B[0m \u001B[38;5;66;03m# Error is only populated when the job state is\u001B[39;00m\n\u001B[0;32m    593\u001B[0m \u001B[38;5;66;03m# JOB_STATE_FAILED or JOB_STATE_CANCELLED.\u001B[39;00m\n\u001B[0;32m    594\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_gca_resource\u001B[38;5;241m.\u001B[39mstate \u001B[38;5;129;01min\u001B[39;00m _PIPELINE_ERROR_STATES:\n\u001B[1;32m--> 595\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mJob failed with:\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m%\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_gca_resource\u001B[38;5;241m.\u001B[39merror)\n\u001B[0;32m    596\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    597\u001B[0m     _LOGGER\u001B[38;5;241m.\u001B[39mlog_action_completed_against_resource(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrun\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcompleted\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;28mself\u001B[39m)\n",
+      "\u001B[1;31mRuntimeError\u001B[0m: Job failed with:\ncode: 5\nmessage: \"Failed to create pipeline job. Error: The image us-central1-docker.pkg.dev/assignment1-402316/image-repo-group1/toxic-predictor:0.0.1 does not exist..\"\n"
      ]
     }
    ],
@@ -316,9 +381,9 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python (Local)",
+   "name": "python3",
    "language": "python",
-   "name": "local-base"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
