Had to change the validation data flag in the notebook as well otherwise the script would return an error

--- a/vertex_ai_pipeline.ipynb
+++ b/vertex_ai_pipeline.ipynb
@@ -228,7 +228,7 @@
     "              '--predict_data', test.path,\n",
     "              '--model_repo',model_bucket,\n",
     "              '--metrics_path', metrics,\n",
-    "              '--validation_data', 'True'\n",
+    "              '--validation_data'\n",
     "             ]\n",
     "    )"
    ],
